# hello_python

packaging_tutorial/: pyproject.toml
packaging_tutorial/src/hello_python/: __init__.py  __main__.py
packaging_tutorial/src/hello_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
